--- a/.vscode/less2/ind.html
+++ b/.vscode/less2/ind.html
@@ -6,7 +6,12 @@
 
 </head>
 <body>
-<h1>Some text</h1>
+<div class='box' id="box">
+    <button id='btn'>Push me</button>
+    <button>Push me</button>
+    <button>Push me</button><br>
+   <br> <a href="https://www.youtube.com/">Youtube</a>
+</div>
 <script src="scrip.js"></script>
 </body>
 
