--- a/.vscode/less2/ind.html
+++ b/.vscode/less2/ind.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset='UTF-8'>
-<title>Title</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class='box' id="box">
-    <button id='btn'>Push me</button>
-    <button>Push me</button>
-    <button>Push me</button><br>
-   <br> <a href="https://www.youtube.com/">Youtube</a>
-</div>
-<script src="scrip.js"></script>
+    <button class="btn">Animate</button>
+    <div class="wrapper">
+        <div class="box"></div>
+    </div>
+    <div class="btn-block">
+        <button class="first"></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+    </div>
+    <script src="scrip.js"></script>
 </body>
-
 </html>
